Tweaked sorting functions to also have secondary sort orders. Fixed error message not showing up when user attempts to add an already-existing entry. Implemented entry visuals on mouse hover.

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -37,6 +37,18 @@ select:valid {
   z-index: 3;
 }
 
+.entry-div:hover {
+  background-color: #f8f9fa;
+}
+
+.entry-div:hover div > .entry-title {
+  color: #3b82f6;
+}
+
+.entry-title:hover {
+  cursor: pointer;
+}
+
 @media (min-width: 576px) {
   .card-height {
     height: 30rem;
